// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'(1) nested ternary - string literal ternary' > expectation 1`] = `
"<template>
  <div>
    <div
      v-bind:class="
        condition
          ? 'lorem ipsum dolor sit amet'
          : condition
            ? 'lorem ipsum dolor sit amet consectetur adipiscing elit proin'
            : \`lorem ipsum dolor sit amet consectetur adipiscing elit proin
              ex massa hendrerit eu posuere\`
      "
    >
      <slot></slot>
    </div>
  </div>
</template>
"
`;

exports[`'(2) nested ternary - template literal ternary' > expectation 1`] = `
"<template>
  <div>
    <div
      v-bind:class="
        condition
          ? 'lorem ipsum dolor sit amet'
          : condition
            ? 'lorem ipsum dolor sit amet consectetur adipiscing elit proin'
            : \`lorem ipsum dolor sit amet consectetur adipiscing elit proin
              ex massa hendrerit eu posuere\`
      "
    >
      <slot></slot>
    </div>
  </div>
</template>
"
`;

exports[`'(3) nested ternary - nested expression in falsy part' > expectation 1`] = `
"<template>
  <div>
    <div
      v-bind:class="
        condition
          ? 'lorem ipsum dolor sit amet'
          : condition
            ? \`lorem ipsum dolor sit amet
              \${'consectetur adipiscing elit proin'} ex massa hendrerit eu
              posuere\`
            : \`lorem ipsum dolor sit amet
              \${'consectetur adipiscing elit proin'} ex massa hendrerit eu
              posuere\`
      "
    >
      <slot></slot>
    </div>
  </div>
</template>
"
`;

exports[`'(4) nested ternary - nested expression in truthy part' > expectation 1`] = `
"<template>
  <div>
    <div
      v-bind:class="
        condition
          ? condition
            ? \`lorem ipsum dolor sit amet
              \${'consectetur adipiscing elit proin'} ex massa hendrerit eu
              posuere\`
            : \`lorem ipsum dolor sit amet
              \${'consectetur adipiscing elit proin'} ex massa hendrerit eu
              posuere\`
          : 'lorem ipsum dolor sit amet'
      "
    >
      <slot></slot>
    </div>
  </div>
</template>
"
`;

exports[`'(5) double nested ternary - string literal ternary' > expectation 1`] = `
"<template>
  <div>
    <div
      v-bind:class="
        condition
          ? 'lorem ipsum dolor sit amet'
          : condition
            ? 'lorem ipsum dolor sit amet consectetur adipiscing elit proin'
            : condition
              ? 'lorem ipsum dolor sit amet consectetur adipiscing elit proin'
              : \`lorem ipsum dolor sit amet consectetur adipiscing elit proin
                ex massa hendrerit eu posuere\`
      "
    >
      <slot></slot>
    </div>
  </div>
</template>
"
`;

exports[`'(6) double nested ternary - template literal ternary' > expectation 1`] = `
"<template>
  <div>
    <div
      v-bind:class="
        condition
          ? 'lorem ipsum dolor sit amet'
          : condition
            ? 'lorem ipsum dolor sit amet consectetur adipiscing elit proin'
            : condition
              ? 'lorem ipsum dolor sit amet consectetur adipiscing elit proin'
              : \`lorem ipsum dolor sit amet consectetur adipiscing elit proin
                ex massa hendrerit eu posuere\`
      "
    >
      <slot></slot>
    </div>
  </div>
</template>
"
`;

exports[`'(7) double nested ternary - nested expression in falsy part' > expectation 1`] = `
"<template>
  <div>
    <div
      v-bind:class="
        condition
          ? 'lorem ipsum dolor sit amet'
          : condition
            ? 'lorem ipsum dolor sit amet consectetur adipiscing elit proin'
            : condition
              ? \`lorem ipsum dolor sit amet
                \${'consectetur adipiscing elit proin'} ex massa hendrerit eu
                posuere\`
              : \`lorem ipsum dolor sit amet
                \${'consectetur adipiscing elit proin'} ex massa hendrerit eu
                posuere\`
      "
    >
      <slot></slot>
    </div>
  </div>
</template>
"
`;

exports[`'(8) double nested ternary - nested expression in truthy part' > expectation 1`] = `
"<template>
  <div>
    <div
      v-bind:class="
        condition
          ? condition
            ? condition
              ? \`lorem ipsum dolor sit amet
                \${'consectetur adipiscing elit proin'} ex massa hendrerit eu
                posuere\`
              : \`lorem ipsum dolor sit amet
                \${'consectetur adipiscing elit proin'} ex massa hendrerit eu
                posuere\`
            : 'lorem ipsum dolor sit amet consectetur adipiscing elit proin'
          : 'lorem ipsum dolor sit amet'
      "
    >
      <slot></slot>
    </div>
  </div>
</template>
"
`;

exports[`'(exp-1) nested ternary - string literal ternary' > expectation 1`] = `
"<template>
  <div>
    <div
      v-bind:class="
        condition
          ? 'lorem ipsum dolor sit amet'
          : condition
            ? 'lorem ipsum dolor sit amet consectetur adipiscing elit proin'
            : \`lorem ipsum dolor sit amet consectetur adipiscing elit proin
              ex massa hendrerit eu posuere\`
      "
    >
      <slot></slot>
    </div>
  </div>
</template>
"
`;

exports[`'(exp-2) nested ternary - template literal ternary' > expectation 1`] = `
"<template>
  <div>
    <div
      v-bind:class="
        condition
          ? 'lorem ipsum dolor sit amet'
          : condition
            ? 'lorem ipsum dolor sit amet consectetur adipiscing elit proin'
            : \`lorem ipsum dolor sit amet consectetur adipiscing elit proin
              ex massa hendrerit eu posuere\`
      "
    >
      <slot></slot>
    </div>
  </div>
</template>
"
`;

exports[`'(exp-3) nested ternary - nested expression in falsy part' > expectation 1`] = `
"<template>
  <div>
    <div
      v-bind:class="
        condition
          ? 'lorem ipsum dolor sit amet'
          : condition
            ? \`lorem ipsum dolor sit amet
              \${'consectetur adipiscing elit proin'} ex massa hendrerit eu
              posuere\`
            : \`lorem ipsum dolor sit amet
              \${'consectetur adipiscing elit proin'} ex massa hendrerit eu
              posuere\`
      "
    >
      <slot></slot>
    </div>
  </div>
</template>
"
`;

exports[`'(exp-4) nested ternary - nested expression in truthy part' > expectation 1`] = `
"<template>
  <div>
    <div
      v-bind:class="
        condition
          ? condition
            ? \`lorem ipsum dolor sit amet
              \${'consectetur adipiscing elit proin'} ex massa hendrerit eu
              posuere\`
            : \`lorem ipsum dolor sit amet
              \${'consectetur adipiscing elit proin'} ex massa hendrerit eu
              posuere\`
          : 'lorem ipsum dolor sit amet'
      "
    >
      <slot></slot>
    </div>
  </div>
</template>
"
`;

exports[`'(exp-5) double nested ternary - string literal ternary' > expectation 1`] = `
"<template>
  <div>
    <div
      v-bind:class="
        condition
          ? 'lorem ipsum dolor sit amet'
          : condition
            ? 'lorem ipsum dolor sit amet consectetur adipiscing elit proin'
            : condition
              ? 'lorem ipsum dolor sit amet consectetur adipiscing elit proin'
              : \`lorem ipsum dolor sit amet consectetur adipiscing elit proin
                ex massa hendrerit eu posuere\`
      "
    >
      <slot></slot>
    </div>
  </div>
</template>
"
`;

exports[`'(exp-6) double nested ternary - template literal ternary' > expectation 1`] = `
"<template>
  <div>
    <div
      v-bind:class="
        condition
          ? 'lorem ipsum dolor sit amet'
          : condition
            ? 'lorem ipsum dolor sit amet consectetur adipiscing elit proin'
            : condition
              ? 'lorem ipsum dolor sit amet consectetur adipiscing elit proin'
              : \`lorem ipsum dolor sit amet consectetur adipiscing elit proin
                ex massa hendrerit eu posuere\`
      "
    >
      <slot></slot>
    </div>
  </div>
</template>
"
`;

exports[`'(exp-7) double nested ternary - nested expression in falsy part' > expectation 1`] = `
"<template>
  <div>
    <div
      v-bind:class="
        condition
          ? 'lorem ipsum dolor sit amet'
          : condition
            ? 'lorem ipsum dolor sit amet consectetur adipiscing elit proin'
            : condition
              ? \`lorem ipsum dolor sit amet
                \${'consectetur adipiscing elit proin'} ex massa hendrerit eu
                posuere\`
              : \`lorem ipsum dolor sit amet
                \${'consectetur adipiscing elit proin'} ex massa hendrerit eu
                posuere\`
      "
    >
      <slot></slot>
    </div>
  </div>
</template>
"
`;

exports[`'(exp-8) double nested ternary - nested expression in truthy part' > expectation 1`] = `
"<template>
  <div>
    <div
      v-bind:class="
        condition
          ? condition
            ? condition
              ? \`lorem ipsum dolor sit amet
                \${'consectetur adipiscing elit proin'} ex massa hendrerit eu
                posuere\`
              : \`lorem ipsum dolor sit amet
                \${'consectetur adipiscing elit proin'} ex massa hendrerit eu
                posuere\`
            : 'lorem ipsum dolor sit amet consectetur adipiscing elit proin'
          : 'lorem ipsum dolor sit amet'
      "
    >
      <slot></slot>
    </div>
  </div>
</template>
"
`;
